- Aura of Flames ends now as expected
- made armors of people in Gelato stronger
- thieves now talk with player in their dungeon in Khorata
- Gelato quest with Serra and Malfama works now
- Myxir now leaves pirates camp again after quest
- crash connected to lorries in Gelato should be fixed
- fixed blocker in "Demonic" quest
- Pickaxes shouldn't be removed after picking ore/gold etc.



1.0.4

General Fixes:

- Granmar's club wasn't treated as weapon
- sentence of Griselda was spoken by hero
- some magic staffs didn't show their mana bonus
- "Helping the innocent" now progresses after the dialog with Brutus
- player now can talk to Xardas regarding the package from Baal Namib also in chapter 3
- improved first log entry for quest "Sword of Innos" to make it clearer what to do next
- player now can heat either one raw steel or all at once
- fixed wrong subtitles when search for a Schagby player
- Quests "Thick air" and "Coward" now fail in chapter 3 if not completed before
- camera at Sly's arena fight should be stopped now with a higher chance
- Guards now leave the gate during "Escape aid"
- Wrong dialog at Flaemar in Patherion bringing him alcohol and joints
- Kimon now gives hero gold for Freudenspender
- Autosave now disabled when player is dead
- Player now needs to talk to Thofeistos before next stage of Urs' quest is triggered
- removed effect of Ghost of Shadow Warrior
- talking to Patient after Endres quest was closed doesn't add new log entry anymore
- Collecting Soja plants works now
- Grom now performs his daily work
- Axe of Doom now updates damage correctly again after loading a savegame
- Increased tolerance where video for "Dark magic" quest is triggered
- Beliar shrine teleport to Beliar fortress now is only unlocked after talking to Xardas about it
- Disabled Spine Gamepad module as it wasn't used by anyone and caused a potential crash when saving game while (multiple?) earthquakes are active
- Hakon's sword can't be sold anymore